fix: fixed tables warnings and removed edit position extra space

--- a/src/components/TradingTerminal/TradingView/TradingView.scss
+++ b/src/components/TradingTerminal/TradingView/TradingView.scss
@@ -16,7 +16,6 @@
 
   .tradingViewContainer {
     @extend %box-shadow;
-    padding: 30px 24px;
 
     @include media("<=sm") {
       flex-direction: column;
